tests/fixtures/invalid/invalid_primitive_type2.avsc
{
  "type": "record",
  "name": "TestRecord",
  "fields": [
    {
      "name": "typo1",
      "type": "integr"
    },
    {
      "name": "typo2",
      "type": "bolean"
    },
    {
      "name": "typo3",
      "type": "doubel"
    }
  ]
}
